z-index issue

--- a/src/pages/main_page/MainPage.module.css
+++ b/src/pages/main_page/MainPage.module.css
@@ -16,7 +16,7 @@ h1 {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 99;
+    z-index: 210;
     transform: translateX(-100%);
     width: 90vw;
     background-color: #fff;
